src/css/pages/case-study-river-safari.scss
@import '../utils/vars';
@import '../utils/colors';
@import '../utils/type';
@import '../utils/functions';
@import '../utils/mixins';

.hero {
  position: relative;
  width: 100%;
}

.intro {
  position: relative;

  background-color: $tuf-color-white;

  color: $tuf-color-gray;

  &__bg-right {
    position: relative;

    left: 0;

    display: flex;

    align-items: center;
    justify-content: center;

    height: rem(300);
    width: 100%;

    background-image: url('/assets/img/case-studies/river-safari/intro__image.jpg');
    background-size: cover;
    background-position: center;
    padding: 0 rem(50);

    @media screen and (min-width: rem(768)) {
      position: absolute;
      top: 0;
      left: 50%;
      width: 50%;
      height: 100%;
    }

    img {
      width: 100%;
      max-width: rem(631);
    }
  }
}

.problem {
  color: $tuf-color-white;

  background-color: #163526;

  &__content {
    &__copy {
      display: block;

      img {
        width: 100%;
        align-self: center;
      }
    }
  }
}

.adventure {
  display: flex;

  flex-direction: column;

  background-color: $tuf-color-white;

  @media screen and (min-width: rem(768)) {
    flex-direction: row;
  }

  &__left,
  &__right {
    position: relative;
    display: flex;

    flex-direction: column;

    width: 100%;

    @media screen and (min-width: rem(768)) {
      width: 50%;
    }
  }

  &__left {
    position: relative;
    width: 100%;

    background-color: $tuf-color-white;
    color: $tuf-color-gray;
  }

  &__right {
    background-color: #6d4a2b;
    color: $tuf-color-white;

    &__icon {
      width: rem(70);

      max-width: none;
    }

    &__motif {
      position: absolute;
      display: none;
      right: 0;
      bottom: 0;
      height: 100%;
      width: auto;
      transform: translateX(100%);

      @media screen and (min-width: rem(1440)) {
        display: block;
      }
    }

    table {
      tr {
        td {
          font-size: rem(18);
          padding-bottom: rem(10);

          &:first-child {
            padding-right: rem(20);
          }

          h3 {
            font-size: rem(24);
            font-weight: $tuf-font-weight-bold;
            margin-bottom: 0;
          }
        }

        &:last-child {
          td {
            padding-bottom: 0;
          }
        }
      }
    }
  }
}

.canola {
  background-color: #4aa3d3;
  color: $tuf-color-white;

  &__right {
    padding: 0;
    max-width: 100%;
  }

  &__image {
    @media screen and (min-width: rem(768)) {
      position: absolute;
      height: 100%;
      width: auto;
      max-width: none;
      left: 0;
    }
  }
}

.notes {
  background-size: cover;
  background-position: center;
  background-image: url('/assets/img/case-studies/river-safari/notes__background--mobile.jpg');

  @media screen and (min-width: rem(768)) {
    height: auto;
    background-image: url('/assets/img/case-studies/river-safari/notes__background--desktop.jpg');
  }
}

.planning {
  background-color: $tuf-color-white;
  color: $tuf-color-gray;

  &__left {
    &__image {
      width: 50%;
      margin: rem(40) 0;
    }
  }

  &__right {
    padding: 0;
  }
}

.map {
  display: flex;

  flex-direction: column;

  background-color: $tuf-color-white;

  @media screen and (min-width: rem(768)) {
    flex-direction: row;
  }

  &__left,
  &__right {
    position: relative;
    width: 100%;

    @media screen and (min-width: rem(768)) {
      width: 50%;
    }
  }

  &__left {
    background-color: #163526;
    color: $tuf-color-white;

    &__content {
      margin: 0 0 0 auto;
    }

    &__image {
      margin-top: rem(40);

      max-width: rem(146);
    }
  }

  &__right {
    display: flex;

    flex-direction: column;

    &__bottom {
      flex: 1;
      background-color: #e8c254;

      &__image {
        display: block;
        margin: 0 0 0 auto;
        width: calc(100% - #{rem(15)});
        max-width: 58.5625rem;
      }
    }

    &__top {
      background-color: #ccc;

      color: $tuf-color-gray;

      &__content {
        padding-bottom: 0;
      }

      &__image {
        padding-top: rem(40);
      }
    }
  }
}

.insight {
  background-size: cover;
  background-position: center;
  background-image: url('/assets/img/case-studies/river-safari/insight__background--mobile.jpg');

  @media screen and (min-width: rem(768)) {
    height: auto;
    background-image: url('/assets/img/case-studies/river-safari/insight__background--desktop.jpg');
  }

  &__image {
    display: block;

    @media screen and (min-width: rem(768)){
      display: none;
    }

    &--desktop {
      display: none;

      @media screen and (min-width: rem(768)){
        display: block;
      }
    }
  }
}

.development {
  display: flex;

  flex-direction: column;

  @media screen and (min-width: rem(768)) {
    flex-direction: row;
  }

  &__left,
  &__right {
    width: 100%;

    @media screen and (min-width: rem(768)) {
      width: 50%;
    }
  }

  &__left {
    background-color: $tuf-color-white;
    color: $tuf-color-gray;
  }

  &__right {
    display: flex;

    flex-direction: column;
    background-color: #005a6b;
    color: $tuf-color-white;
  }
}

